# gityard

./: .gitignore  README.md  pyproject.toml  zoo-project.json
docs/raw/: 001__gityard-mission.json  002__gityard-spec.json
src/gityard/: __main__.py  cli.py
